# soulinjector-fw-common

./: CMakeLists.txt
comm/: http_downloader.cpp  http_downloader.hpp  mq_defs.hpp  mqtt_client.cpp  mqtt_client.hpp  rpc_cmd_packet.hpp  rpc_report_packet.hpp
misc/: psram_json_allocator.hpp
reporter/: reporter.hpp
runner/: runner.hpp
ui/: ui_if.hpp
